--- a/ProjectCvT.ipynb
+++ b/ProjectCvT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMAh/A7YYsM1EU1syJq3X1t",
+      "authorship_tag": "ABX9TyPtaJdQRxPtidQUis5BFxym",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6119,6 +6119,30 @@
             "Speed: 0.5ms preprocess, 4.7ms inference, 0.0ms loss, 3.4ms postprocess per image\n",
             "Results saved to \u001b[1mruns/detect/val\u001b[0m\n",
             "Validation Time: 8.6069 seconds\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model.info())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0qF-jLSC1gok",
+        "outputId": "4bc675ea-7159-4b53-97f9-a0d8ce48dde3"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model summary (fused): 168 layers, 3,005,843 parameters, 0 gradients, 8.1 GFLOPs\n",
+            "(168, 3005843, 0, 8.0851968)\n"
           ]
         }
       ]
